# kepler-model-server

./: .gitignore  .yamllint.yaml  Makefile  README.md  VERSION  contributing.md  docker-compose.yaml  kepler_model_trainer.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  document.yaml  feature_request.yaml
.github/workflows/: aws_model_trainer.yml  binary.yml  build-push-deploy.yml  build-push.yml  cluster_deploy.yml  collect-data-self-hosted.yml  collect-train.yml  commit-msg.yml  deploy_server.yml  developer_local.yml  docker-base-image.yml  docker-image.yml  integration-test.yaml  integration-test.yml  lint.yml  pr.yml  push-pr.yml  push-to-main.yml  release.yml  retrain-model.yml  tekton-test.yml  train-model-on-release.yml  train-model-self-hosted.yml  train-model.yml  train.yml  unit-test.yml  unittest.yaml
cmd/: README.md  base_gunicorn_config.py  cmd_plot.py  cmd_util.py  gunicorn.sh  main.py
config/: gunicorn_config.py
demo/: Dockerfile  Makefile  README.md  demo.py  deployment.yaml  initial_model_train.py  kepler_model_server_plot.ipynb  test_predict.py
demo/predict_data/: core.txt  coremark_4threads_to_32threads_5rep_ondemand_demo.json  dram.txt
demo/query_data/coremark_4threads_to_32threads_5rep_ondemand_demo/: node_energy_stat.csv  node_package_energy_millijoule.csv  pod_curr_dynamic_energy_millijoule.csv  pod_curr_energy_in_pkg_millijoule.csv  pod_energy_stat.csv  pod_total_dynamic_energy_millijoule.csv  pod_total_energy_in_pkg_millijoule.csv
demo/query_data/idle_1000s/: node_energy_stat.csv  node_package_energy_millijoule.csv  pod_curr_dynamic_energy_millijoule.csv  pod_curr_energy_in_pkg_millijoule.csv  pod_energy_stat.csv  pod_total_dynamic_energy_millijoule.csv  pod_total_energy_in_pkg_millijoule.csv
doc/: model_feature.md  model_format.md  model_output.md  train_pipeline.md
dockerfiles/: Dockerfile  Dockerfile.base  Dockerfile.test  Dockerfile.test-gunicorn  Dockerfile.test-model-server  Dockerfile.test-nobase  Dockerfile.test-nobase.dockerignore  Dockerfile.test-offline-trainer  Dockerfile.test.dockerignore  Dockerfile.weights  requirements.txt
docs/developer/: README.md
docs/developer/estimate/: classes.plantuml  packages.plantuml
docs/developer/server/: classes.plantuml  (+1 more)
hack/: aws_helper.sh  k8s_helper.sh  utils.bash
manifests/: deployment.yaml  set.sh
manifests/base/: kustomization.yaml
manifests/dev/: deployment.yaml  trainer-patch.yaml  xgboost_deploy.yaml
manifests/host-local/: deployment.yaml  trainer-patch.yaml
manifests/kepler/: kustomization.yaml
manifests/local/: deployment.yaml  trainer-patch.yaml
manifests/offline-trainer/: kustomization.yaml  offline-trainer.yaml
manifests/server/: kustomization.yaml  kustomizeconfig.yaml  server.yaml
manifests/test/: file-server.yaml  model-request-client.yaml  patch-estimator-sidecar.yaml  power-request-client.yaml
model_training/: README.md  cmd_instruction.md  cpe_script_instruction.md  script.sh
model_training/benchmark/: coremark.yaml  sample.yaml  stressng.yaml
model_training/cpe_benchmark/: coremark.yaml  parsec.yaml  sample.yaml  stressng.yaml
model_training/custom-cluster/: README.md  common.sh  main.sh  prometheus.sh  verify.sh
model_training/deployment/: cpe-operator.yaml  kepler.yaml  prom-kepler-rbac.yaml  prom-np.yaml
model_training/s3/: Dockerfile  README.md  pyproject.toml  s3-loader.py  s3-pusher.py  util.py
model_training/s3-pusher/: Dockerfile  s3-pusher.py
model_training/s3/src/s3/: __about__.py  loader.py  pusher.py  util.py
model_training/s3/tests/: __init__.py
model_training/tekton/: README.md  push-taskrun.yaml
resource/: kmeans.pkl
script/: setup-ec2-runner.sh
server/: Dockerfile  core_dataset1.csv  docker-compose.yaml  dram_dataset.csv  energy_scheduler.py  kepler_model_server_training.py  kepler_model_trainer.py  lr_model.ipynb  main.py  model_server.py  online_trainer.py  otel-collector-config.yaml  prometheus.yaml  prometheus.yml  prometheus_datapipeline_functions.py  requirements.txt  run_core_dataset.py  server.py  xgboost_expose_model.py  xgboost_incremental_trainer.py
server/dockerfiles/: Dockerfile.weights  requirements.txt
server/prom/: query.py  query_test.py
server/real_test_datasets/: metrics.csv
server/train/: __init__.py  extractor.py  kepler_model_trainer.py  keras_pipe.py  keras_pipe_test.py  keras_pipe_util.py  pipe_util.py  pipeline.py  train_types.py  transformer.py
server/util/: config.py  loader.py
src/: __about__.py  abs-train-pipelinerun.yaml
src/estimate/: __init__.py  archived_model.py  estimator.py  model_server_connector.py
src/kepler_model/: __about__.py  abs-train-pipelinerun.yaml
src/profile/: README.md  clustered_data.csv  profiler.py  script.sh
src/server/: model_server.py
src/train/: __init__.py  ec2_pipeline.py  offline_trainer.py  online_trainer.py  pipeline.py  specpower_pipeline.py
src/util/: __init__.py  config.py  extract_types.py  format.py  loader.py  prom_types.py  saver.py  train_types.py
tekton/: README.md  abs-train-pipelinerun.yaml  complete-pipelinerun.yaml  dyn-train-pipelinerun.yaml
tekton/pipelines/: complete-train.yaml  single-train.yaml
tekton/tasks/: extract-task.yaml  original-pipeline-task.yaml  stressng-task.yaml
tests/: README.md  client_load_tester.py  common_plot.py  e2e_test.sh  estimator_model_request_test.py  estimator_model_test.py  estimator_power_request_test.py  extractor_test.py  http_server.py  isolator_test.py  kepler_regression_model_tests.py  minimal_trainer.py  model_select_test.py  model_server_test.py  model_tester.py  offline_trainer_test.py  pipeline_test.py  prom_test.py  query_and_train_test.py  query_test.py  train_test.py  trainer_test.py  weight_model_request_test.py  xgboost_test.py
tests/data/: node_type_index.json
tests/query_data/: node_cpu_scaling_frequency_hertz.csv  node_energy_stat.csv  node_package_energy_millijoule.csv  pod_cpu_cpu_time_us.csv  pod_energy_stat.csv
tests/test_regression_datasets/: core_dataset.csv  dram_dataset.csv
(+363 files in other folders)
